fix card text overflow

--- a/src/components/Flashcards/Flip/flip.module.scss
+++ b/src/components/Flashcards/Flip/flip.module.scss
@@ -26,7 +26,22 @@
         border: 0.25px solid rgba(122, 141, 156, 0.25);
         @include box-shadow;
 
+        .front,
+        .back {
+            -webkit-backface-visibility: hidden;
+            backface-visibility: hidden;
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            display: flex;
+            justify-content: center;
+            padding: 1rem;
+            box-sizing: border-box;
+            align-items: center;
+        }
+
         .front {
+
             p {
                 font-weight: 600;
                 color: $grey;
@@ -43,22 +58,22 @@
                 color: $grey;
                 font-size: 1rem;
                 white-space: pre-line;
+                box-sizing: border-box;
             }
+
+            &.adjusted {
+                align-items: flex-start;
+                overflow-y: scroll;
+
+                p {
+                    padding: 1rem 0;
+                }
+
+            }
+
         }
 
-        .front,
-        .back {
-            -webkit-backface-visibility: hidden;
-            backface-visibility: hidden;
-            position: absolute;
-            width: 100%;
-            height: 100%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            padding: 1rem;
-            box-sizing: border-box;
-        }
+
     }
 
 
